ADM-583:[backend] replace target fields' key with name